tests/baselines/reference/jsxTypeInferences.errors.txt
tests/cases/conformance/jsx/jsxTypeInferences.ts(7,1): error TS2345: Argument of type '{}' is not assignable to parameter of type '{ items: string; }'.
  Property 'items' is missing in type '{}'.
tests/cases/conformance/jsx/jsxTypeInferences.ts(8,1): error TS2345: Argument of type '{ items: boolean; }' is not assignable to parameter of type '{ items: string; }'.
  Types of property 'items' are incompatible.
    Type 'boolean' is not assignable to type 'string'.


==== tests/cases/conformance/jsx/jsxTypeInferences.ts (2 errors) ====
    ///<jsx factory="test" />
    
    declare function test<P>(p1: P, p2: P): void;
    
    var Comp = { items: "foo" };
    test(Comp, {});
    <Comp />;
    ~~~~~~~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type '{ items: string; }'.
!!! error TS2345:   Property 'items' is missing in type '{}'.
    <Comp items />;
    ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ items: boolean; }' is not assignable to parameter of type '{ items: string; }'.
!!! error TS2345:   Types of property 'items' are incompatible.
!!! error TS2345:     Type 'boolean' is not assignable to type 'string'.
    <Comp items="foo" />;